<resources>
    <string name="app_name">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Имя Фамилия</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="import_item">Import</string>
    <string name="gallery_item">Gallery</string>
    <string name="slideshow_item">Slideshow</string>
    <string name="tools_item">Tools</string>
    <string name="communicate_item">Communicate</string>
    <string name="share_item">Share</string>
    <string name="send_item">Send</string>
    <string name="google_map_api_key">AIzaSyB0l8cYrZw-Xd_DVj0J4CHPLkrUXUCAUJY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_item">Диалоги</string>
    <string name="map_item">Карта</string>
    <string name="settings_nav">Настройки</string>
    <string name="other_item">Социальные сети</string>
    <string name="exit_item">Выйти</string>
    <string name="vk_login_btn">Авторизация ВК</string>
    <!--VK API -->
    <integer name="com_vk_sdk_AppId">6996559</integer>
</resources>
