<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dialogs"
            android:icon="@drawable/ic_question_answer"
            android:title="@string/dialog_item" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map_item" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings_nav" />
    </group>

    <item android:title="@string/other_item">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit_item" >
            </item>
        </menu>
    </item>

</menu>
